--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-google-maps/api": "^2.20.6",
     "@vimeo/player": "^2.25.1",
     "cra-template": "1.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.29.0",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "smooth-scroll-into-view-if-needed": "^2.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
